pamc/src/tests/sample_code/should_fail/ast_simplification/labeled_match_case_params/underscore_label/second_label_is_underscore.ph
type Nat {
    .O: Nat,
    .S(pred~n: Nat): Nat,
}

let pred = fun _(x: Nat): Nat {
    match x {
        .O => Nat.O,
        .S(pred: x, :_) => x,
    }
};
